--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.GetPet"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.UploadAPetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PrivateAreaActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_private_area"
             android:theme="@style/Theme.GetPet">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +26,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GetPet">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
