--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
         android:theme="@style/Theme.GetPet"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.RegisterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.GetPet" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.GetPet">
+            android:theme="@style/Theme.GetPet"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
