--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
@@ -31,9 +32,7 @@
         </activity>
         <activity
             android:name=".activities.UploadAPetActivity"
-            android:exported="false"
-
-        />
+            android:exported="false" />
 
         <activity
             android:name=".activities.PrivateAreaActivity"
@@ -45,6 +44,4 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
-
 </manifest>
