--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,22 @@
         android:theme="@style/Theme.GetPet"
         tools:targetApi="31">
         <activity
+            android:name=".activities.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.GetPet" />
+        <activity
+            android:name=".activities.SinglePostActivity"
+            android:exported="false"
+            android:label="@string/title_activity_single_post"
+            android:theme="@style/Theme.GetPet" />
+        <activity
             android:name=".activities.RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.GetPet" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.GetPet">
@@ -30,18 +40,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.UploadAPetActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".activities.PrivateAreaActivity"
-            android:exported="true"
-            android:label="@string/title_activity_private_area"
-            android:theme="@style/Theme.GetPet" />
-
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+
 </manifest>
