--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
+        android:name=".GetPetApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -32,7 +33,7 @@
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="LogInActivity"
             android:theme="@style/Theme.GetPet">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
